# NoobSynth3

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PERFORMANCE_OPTIMIZATION.md  PROJECT_NOTES.md  README.md  build.bat  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.bak
crates/: README.md
crates/dsp-core/: Cargo.toml  README.md
crates/dsp-graph/: Cargo.toml  README.md
crates/dsp-ipc/: Cargo.toml  README.md
crates/dsp-plugin/: Cargo.toml  README.md
crates/dsp-plugin/src/: lib.rs
crates/dsp-standalone/: Cargo.toml  README.md
crates/dsp-wasm/: Cargo.toml  README.md
docs/: ARCHITECTURE.md  ARPEGGIATOR_PLAN.md  CONTROLS_REFACTORING_PLAN.md  DEVELOPMENT.md  FUTURE_ROADMAP.md  LAYOUT_CONSISTENCY_PLAN.md  MODULES.md  POLYPHONY_PLAN.md  RESONATOR_POP_ANALYSIS.md  UNDO_REDO_ROADMAP.md  VST.md
public/ay/: AY Is Not A Doorbell.vtx  Aleste.vtx  Alex Tears.vtx  Commando.vtx  Genetic Error.vtx  Resound.vtx  Second Reality.vtx  Turrican 2.vtx  manifest.json
public/midi-presets/: bach-wtc-bwv846.mid  manifest.json
public/presets/: 8bit-mario-nes.json  8bit-mario.json  909-house.json  909-kit-basic.json  ab-vca.json  ab-vco.json  acid-classic.json  acid-drone.json  acid-squelch.json  acid-techno-jam.json  acid-trio.json  ambient-drift.json  ambient-space.json  arp-demo.json  arp-sync-lead.json  ay-player-test.json  ay-spectrum-nes.json  ay-spectrum-snes.json  berlin-school.json  chaos-butterfly.json  chaos-collider.json  chaos-concerto.json  chaos-crystals.json  chaos-oracle.json  chaos-requiem.json  chaos-singing.json  chaos-singularity.json  chaos-symphony.json  choir-test.json  clock-inputs-demo.json  clock-multi-seq.json  clock-test.json  commando-comparison.json  compressor-bass.json  compressor-drums.json  cosmic-machinery.json  cs80-vangelis.json  deep-note-rise.json  descent-into-void.json  dirty-bass.json  (+157 more)
public/sid/: manifest.json
scripts/: build-wasm.ps1
src/: App.css  App.tsx  AppV2.tsx  index.css  styles.css  vcv-style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/engine/: AudioEngine.ts  WasmGraphEngine.ts
src/hooks/: HOOKS.md  useComputerKeyboard.ts  useControlVoices.ts  useMarioSequencer.ts  useMidi.ts  useModuleDrag.ts  usePatching.tsx  (+1 more)
(+222 files in other folders)
