[package]
name = "noobsynth3"
version = "0.1.0"
description = "NoobSynth3 Modular Synthesizer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "noobsynth3"
path = "src/main.rs"

[lib]
name = "noobsynth3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
dsp-core = { path = "../crates/dsp-core" }
dsp-graph = { path = "../crates/dsp-graph" }
dsp-ipc = { path = "../crates/dsp-ipc" }
cpal = "0.15"
midir = "0.10"
