[package]
name = "noobsynth_vst"
version = "0.1.0"
edition = "2021"
authors = ["NoobSynth"]
description = "NoobSynth modular synthesizer VST3/CLAP plugin"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
dsp-core = { path = "../dsp-core" }
dsp-graph = { path = "../dsp-graph" }
dsp-ipc = { path = "../dsp-ipc" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
# Enable SIMD optimizations if available
simd = []
